feat(cli): 对齐 Dreamina CLI v1.4.14 契约